Update: app/pages/visitor.html

--- a/app/pages/visitor.html
+++ b/app/pages/visitor.html
@@ -8,9 +8,9 @@
     ><img src="https://www.flagcounter.me/f42/" alt="Flag Counter"
   /></a>
 
-  <a href="https://info.flagcounter.com/XtZi"
+  <a href="https://info.flagcounter.com/dhrP"
     ><img
-      src="https://s01.flagcounter.com/count2/XtZi/bg_FFFFFF/txt_000000/border_CCCCCC/columns_4/maxflags_12/viewers_0/labels_0/pageviews_0/flags_0/percent_0/"
+      src="https://s01.flagcounter.com/count2/dhrP/bg_FFFFFF/txt_000000/border_CCCCCC/columns_4/maxflags_12/viewers_0/labels_1/pageviews_1/flags_0/percent_0/"
       alt="Flag Counter"
       border="0"
   /></a>
