Update: app/js/detect_loop.js, app/js/detect_motion.js, app/js/main_start.js, app/js/main_start_cam.js, app/js/selector_source.js, app/js/setting_dis_datetime.js, index.html

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     <script src="app/js/main_start.js"></script>
     <script src="app/js/main_stop.js"></script>
     <script src="app/js/main_start_cam.js"></script>
-    <script src="app/js/detect_object.js"></script>
+    <script src="app/js/detect_loop.js"></script>
     <!-- <script src="app/js/detect_text.js"></script> -->
     <script src="app/js/database.js"></script>
     <script src="app/js/selector_source.js"></script>
