--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -5,7 +5,7 @@
       <label for="video-source">
         <select id="video-source" disabled="true" title="Select video source">
           <!-- <option value="camera" selected>Camera (default)</option> -->
-          <option value="camera" selected>Camera (default)</option>
+          <option value="camera">Camera (default)</option>
           <option value="camera_usb">USB Camera (external)</option>
           <option value="camera_ip" selected>IP Camera (wifi)</option>
           <option value="stream">Stream (internet)</option>
