Update: app/css/styles_main.css, index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- <h1>OpenLens</h1> -->
 
       <!-- create a row with two columns on the same row -->
-      <div class="row" style="display: flex">
+      <div class="row-tile">
         <div class="title-section" style="justify-content: flex-start">
           <!-- Source selection -->
           <span class="source-mode-text" id="source-mode-text">Source</span>
