Update: app/css/styles_main.css, index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <!-- create a row with two columns on the same row -->
       <div class="row-tile">
-        <div class="title-section" style="justify-content: flex-start">
+        <div class="title-section-left">
           <!-- Source selection -->
           <span class="source-mode-text" id="source-mode-text">Source</span>
           <label class="switch" for="source-switch">
@@ -69,7 +69,7 @@
           </label>
         </div>
 
-        <div class="title-section">
+        <div class="title-section-right">
           <!-- Screen selection -->
           <span class="screen-mode-text" id="screen-mode-text">Screen</span>
           <label class="switch" for="screen-switch">
