Update: app/css/styles_main.css, app/pages/visitor.html

--- a/app/pages/visitor.html
+++ b/app/pages/visitor.html
@@ -5,7 +5,15 @@
   <h3>Visitor Information</h3>
 
   <a href="https://www.flagcounter.me/details/f42"
-    ><img src="https://www.flagcounter.me/f42/" alt="Flag Counter"
+    ><img
+      src="https://www.flagcounter.me/f42/"
+      alt="Flag Counter"
+      style="
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 15px;
+      "
   /></a>
 
   <a href="https://info.flagcounter.com/dhrP"
@@ -13,6 +21,7 @@
       src="https://s01.flagcounter.com/count2/dhrP/bg_FFFFFF/txt_000000/border_CCCCCC/columns_4/maxflags_12/viewers_0/labels_1/pageviews_1/flags_0/percent_0/"
       alt="Flag Counter"
       border="0"
+      style="display: block; margin-left: auto; margin-right: auto"
   /></a>
 
   <div class="controls-section">
