Update: app/js/detect_motion.js, index.html

--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
         "
       /> -->
 
+      <!-- <img
+        id="ipcam-feed-img"
+        src="https://192.168.245.139:5500/video"
+        alt="IP Camera Feed"
+      /> -->
+
       <div class="controls-section">
         <button
           onclick="startButton()"
