Update: app/js/detect_loop.js, app/js/detect_object.js, app/js/detect_text.js, app/js/include_html.js, app/js/init_system.js, app/pages/detect.html, app/pages/status.html, index.html

--- a/app/pages/status.html
+++ b/app/pages/status.html
@@ -4,10 +4,15 @@
       <div class="status-content-section">
         <!-- Detection Indicators -->
         <div class="detection-indicators" style="margin-top: 10px">
+          <span id="object-status" class="detection-status"
+            >Object: <b>-</b></span
+          >
+          |
+          <span id="text-status" class="detection-status">Text: <b>-</b></span>
+          |
           <span id="motion-status" class="detection-status"
             >Motion: <b>-</b></span
           >
-
           |
           <span id="smoke-status" class="detection-status"
             >Smoke: <b>-</b></span
