--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.1/dist/tesseract.min.js"></script> -->
     <script src="app/js/script_tf_min.js"></script>
     <script src="app/js/script_coco_ssd.js"></script>
-    <!-- <script src="app/js/script_tesseract.js"></script> -->
+    <script src="app/js/script_tesseract.js"></script>
   </head>
 
   <body>
@@ -339,6 +339,8 @@
     <script src="app/js/main_visitor.js"></script>
     <script src="app/js/detect.js"></script>
     <script src="app/js/setting.js"></script>
+    <script src="app/js/detect_text.js"></script>
+    <script src="app/js/detect_object.js"></script>
     <script src="app/js/detect_motion.js"></script>
     <script src="app/js/detect_sound.js"></script>
     <script src="app/js/detect_smoke.js"></script>
@@ -360,7 +362,6 @@
     <script src="app/js/main_stop.js"></script>
     <script src="app/js/main_start_cam.js"></script>
     <script src="app/js/detect_loop.js"></script>
-    <!-- <script src="app/js/detect_text.js"></script> -->
     <script src="app/js/database.js"></script>
     <script src="app/js/selector_source.js"></script>
     <script src="app/js/selector_unit.js"></script>
