Update: app/css/styles_main.css, app/js/detect_loop.js, app/js/detect_object.js, app/js/detect_text.js, app/js/init_system.js, app/pages/mode.html, app/pages/source.html, app/pages/status.html, app/pages/text.html, index.html

--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
         style="display: none; padding: 0"
       ></div>
 
+      <!-- include text.html  -->
+      <div
+        class="group-frame-text"
+        id="group-frame-text"
+        include-html="app/pages/text.html"
+        style="display: none; padding: 0"
+      ></div>
+
       <!-- video feed -->
       <div class="status" id="status">Initializing...</div>
       <div class="video-section">
