--- a/app/pages/status.html
+++ b/app/pages/status.html
@@ -1,47 +1,37 @@
 <div class="container-section" style="margin: 0; padding: 5px">
-  <div class="status-section">
-    <div class="status-header">
-      <div class="status-content-section">
-        <!-- Detection Indicators -->
-        <div class="detection-indicators" style="margin-top: 10px">
-          <span id="object-status" class="detection-status"
-            >Object: <b>-</b></span
-          >
-          |
-          <span id="text-status" class="detection-status">Text: <b>-</b></span>
-          |
-          <span id="motion-status" class="detection-status"
-            >Motion: <b>-</b></span
-          >
-          |
-          <span id="smoke-status" class="detection-status"
-            >Smoke: <b>-</b></span
-          >
-          |
-          <span id="fire-status" class="detection-status">Fire: <b>-</b></span>
-          |
-          <span id="flood-status" class="detection-status"
-            >Flood: <b>-</b></span
-          >
-          |
-          <span id="light-status" class="detection-status"
-            >Light: <b>-</b></span
-          >
-          |
-          <span id="rain-status" class="detection-status">Rain: <b>-</b></span>
-          |
-          <span id="falling-status" class="detection-status"
-            >Falling: <b>-</b></span
-          >
-          |
-          <span id="breaking-status" class="detection-status"
-            >Breaking: <b>-</b></span
-          >
-          |
-          <span id="sound-status" class="detection-status"
-            >Sound: <b>-</b></span
-          >
-        </div>
+  <div class="video-source-section">
+    <div class="status-section">
+      <!-- Detection Indicators -->
+      <div class="detection-indicators" style="margin-top: 10px">
+        <span id="object-status" class="detection-status"
+          >Object: <b>-</b></span
+        >
+        |
+        <span id="text-status" class="detection-status">Text: <b>-</b></span>
+        |
+        <span id="motion-status" class="detection-status"
+          >Motion: <b>-</b></span
+        >
+        |
+        <span id="smoke-status" class="detection-status">Smoke: <b>-</b></span>
+        |
+        <span id="fire-status" class="detection-status">Fire: <b>-</b></span>
+        |
+        <span id="flood-status" class="detection-status">Flood: <b>-</b></span>
+        |
+        <span id="light-status" class="detection-status">Light: <b>-</b></span>
+        |
+        <span id="rain-status" class="detection-status">Rain: <b>-</b></span>
+        |
+        <span id="falling-status" class="detection-status"
+          >Falling: <b>-</b></span
+        >
+        |
+        <span id="breaking-status" class="detection-status"
+          >Breaking: <b>-</b></span
+        >
+        |
+        <span id="sound-status" class="detection-status">Sound: <b>-</b></span>
       </div>
     </div>
   </div>
