Update: app/css/styles_main.css, app/pages/mode.html, app/pages/text.html

--- a/app/pages/mode.html
+++ b/app/pages/mode.html
@@ -1,6 +1,7 @@
 <div class="container-section" style="margin: 0; padding: 5px">
   <div class="video-source-section">
     <div class="mode-section">
+      <!-- input for mode selection -->
       <label for="mode-select">
         <select id="mode-select" title="Select mode">
           <option value="auto" selected>Auto</option>
@@ -8,6 +9,8 @@
           <option value="custom">Custom</option>
         </select>
       </label>
+
+      <!-- button -->
       <button
         id="btn-mode-ok"
         class="button-ok"
