Update: .gitignore, app/js/init_system.js, index.html

--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
         style="display: none; padding: 0"
       ></div>
 
+      <!-- include gemini.html  -->
+      <div
+        class="group-frame-gemini"
+        id="group-frame-gemini"
+        include-html="app/pages/gemini.html"
+        style="display: none; padding: 0"
+      ></div>
+
       <!-- video feed -->
       <div class="status" id="status">Initializing...</div>
       <div class="video-section">
@@ -347,6 +355,7 @@
     <script src="app/js/main_visitor.js"></script>
     <script src="app/js/detect.js"></script>
     <script src="app/js/setting.js"></script>
+    <script src="app/js/gemini.js"></script>
     <script src="app/js/detect_text.js"></script>
     <script src="app/js/detect_object.js"></script>
     <script src="app/js/detect_motion.js"></script>
