Update: app/pages/text.html

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -48,6 +48,14 @@
           Cut
         </button>
         <button
+          id="btn-select"
+          class="button-select"
+          type="button"
+          onclick="selectTexts()"
+        >
+          Select
+        </button>
+        <button
           id="btn-mode-clear"
           class="button-clear"
           type="button"
