Update: app/js/detect_object.js, app/js/detect_text.js, app/pages/text.html, resources/image/imgt1.jpg, resources/image/pic1.png, resources/image/pic10.jpg, resources/image/pic11.png, resources/image/pic12.png, resources/image/pic13.png, resources/image/pic2.jpg, resources/image/pic3.jpg, resources/image/pic4.png, resources/image/pic5.png, resources/image/pic6.jpg, resources/image/pic7.jpg, resources/image/pic8.jpg, resources/image/pic9.jpg

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -32,32 +32,48 @@
       <div class="row-text">
         <!-- Row 2: Buttons -->
         <button
-          id="btn-copy"
-          class="button-copy"
+          id="btn-detect-text"
+          class="button"
+          type="button"
+          onclick="detectTexts()"
+        >
+          Detect
+        </button>
+        <button
+          id="btn-pause-text"
+          class="button"
+          type="button"
+          onclick="pauseTexts()"
+        >
+          Pause
+        </button>
+        <button
+          id="btn-copy-text"
+          class="button"
           type="button"
           onclick="copyTexts()"
         >
           Copy
         </button>
         <button
-          id="btn-cut"
-          class="button-cut"
+          id="btn-cut-text"
+          class="button"
           type="button"
           onclick="cutTexts()"
         >
           Cut
         </button>
         <button
-          id="btn-select"
-          class="button-select"
+          id="btn-select-text"
+          class="button"
           type="button"
           onclick="selectTexts()"
         >
           Select
         </button>
         <button
-          id="btn-mode-clear"
-          class="button-clear"
+          id="btn-clear-text"
+          class="button"
           type="button"
           onclick="clearTexts()"
         >
