--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -14,17 +14,30 @@
         <!-- Row 1: Language select -->
         <label for="language-select" style="margin: 0">
           <select id="language-select" title="Select language">
-            <option value="en" selected>English</option>
-            <option value="th">Thai</option>
-            <option value="es">Spanish</option>
-            <option value="fr">French</option>
-            <option value="de">German</option>
-            <option value="zh">Chinese</option>
-            <option value="ja">Japanese</option>
-            <option value="ru">Russian</option>
-            <option value="ar">Arabic</option>
-            <option value="pt">Portuguese</option>
-            <option value="hi">Hindi</option>
+            <option value="eng" selected>English</option>
+            <option value="tha" selected>Thai</option>
+            <option value="spa">Spanish</option>
+            <option value="fra">French</option>
+            <option value="deu">German</option>
+            <option value="chi_sim">Chinese (Simplified)</option>
+            <option value="jpn">Japanese</option>
+            <option value="rus">Russian</option>
+            <option value="ara">Arabic</option>
+            <option value="por">Portuguese</option>
+            <option value="hin">Hindi</option>
+            <option value="ita">Italian</option>
+            <option value="kor">Korean</option>
+            <option value="tur">Turkish</option>
+            <option value="vie">Vietnamese</option>
+            <option value="nld">Dutch</option>
+            <option value="ell">Greek</option>
+            <option value="heb">Hebrew</option>
+            <option value="pol">Polish</option>
+            <option value="ces">Czech</option>
+            <option value="ron">Romanian</option>
+            <option value="swe">Swedish</option>
+            <option value="fin">Finnish</option>
+            <option value="hun">Hungarian</option>
           </select>
         </label>
       </div>
