Update: app/js/detect_text.js, app/pages/text.html, resources/image/chi1.jpg, resources/image/chi2.jpg, resources/image/chi3.jpg, resources/image/eng (1).jpg, resources/image/eng (1).png, resources/image/eng (2).jpg, resources/image/eng (2).png, resources/image/eng (3).jpg, resources/image/eng (3).png, resources/image/eng (4).jpg, resources/image/eng (4).png, resources/image/eng (5).jpg, resources/image/eng (5).png, resources/image/eng (6).png, resources/image/fig14.png, resources/image/fig7.jpg, resources/image/fra1.jpg, resources/image/ger1.png, resources/image/gre1.png, resources/image/gre2.jpg, resources/image/jpn1.jpg, resources/image/jpn2.jpg, resources/image/kor1.png, resources/image/pic1.jpg, resources/image/por1.png, resources/image/spa1.jpg, resources/image/tha (2).jpg, resources/image/tha (3).jpg, resources/image/tha (4).jpg, resources/image/tha (5).jpg, resources/image/tha (6).jpg, resources/image/tha (7).jpg, resources/image/tur1.png

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -80,9 +80,9 @@
           id="btn-select-text"
           class="button"
           type="button"
-          onclick="selectTexts()"
+          onclick="selectallTexts()"
         >
-          Select
+          Select All
         </button>
         <button
           id="btn-clear-text"
