Update: app/js/detect_text.js, app/pages/text.html, resources/image/tha (4).jpg, resources/text/_tha (1).jpg, resources/text/_tha (2).jpg, resources/text/_tha (3).jpg, resources/text/_tha (4).jpg, resources/text/_tha (5).jpg, resources/text/_tha (6).jpg, resources/text/chi1.jpg, resources/text/chi2.jpg, resources/text/chi3.jpg, resources/text/eng (1).jpg, resources/text/eng (1).png, resources/text/eng (2).jpg, resources/text/eng (2).png, resources/text/eng (3).jpg, resources/text/eng (3).png, resources/text/eng (4).jpg, resources/text/eng (4).png, resources/text/eng (5).jpg, resources/text/eng (5).png, resources/text/eng (6).png, resources/text/fra1.jpg, resources/text/ger1.png, resources/text/gre1.png, resources/text/gre2.jpg, resources/text/jpn1.jpg, resources/text/jpn2.jpg, resources/text/kor1.png, resources/text/pic1.jpg, resources/text/pic2.jpg, resources/text/por1.png, resources/text/spa1.jpg, resources/text/tur1.png

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -68,7 +68,7 @@
         >
           Copy
         </button>
-        <button
+        <!-- <button
           id="btn-cut-text"
           class="button"
           type="button"
@@ -83,7 +83,7 @@
           onclick="selectallTexts()"
         >
           Select All
-        </button>
+        </button> -->
         <button
           id="btn-clear-text"
           class="button"
