Update: app/css/styles_main.css, app/js/detect_text.js, app/pages/source.html, app/pages/text.html

--- a/app/pages/source.html
+++ b/app/pages/source.html
@@ -8,8 +8,8 @@
           <option value="camera_usb">USB Camera (external)</option>
           <option value="camera_ip">IP Camera (wifi)</option>
           <option value="stream">Stream (internet)</option>
-          <option value="video" selected>Video (file)</option>
-          <option value="image">Image (file)</option>
+          <option value="video">Video (file)</option>
+          <option value="image" selected>Image (file)</option>
         </select>
       </label>
 
