--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -44,33 +44,17 @@
 
       <div class="row-text">
         <!-- Row 2: Buttons -->
-        <button
-          id="btn-detect-text"
-          class="button"
-          type="button"
-          onclick="detectTexts()"
-        >
+        <button id="btn-detect-text" type="button" onclick="detectTexts()">
           Detect
         </button>
-        <button
-          id="btn-pause-text"
-          class="button"
-          type="button"
-          onclick="pauseTexts()"
-        >
+        <button id="btn-pause-text" type="button" onclick="pauseTexts()">
           Pause
         </button>
-        <button
-          id="btn-copy-text"
-          class="button"
-          type="button"
-          onclick="copyTexts()"
-        >
+        <button id="btn-copy-text" type="button" onclick="copyTexts()">
           Copy
         </button>
         <!-- <button
           id="btn-cut-text"
-          class="button"
           type="button"
           onclick="cutTexts()"
         >
@@ -78,26 +62,15 @@
         </button>
         <button
           id="btn-select-text"
-          class="button"
           type="button"
           onclick="selectallTexts()"
         >
           Select All
         </button> -->
-        <button
-          id="btn-clear-text"
-          class="button"
-          type="button"
-          onclick="clearTexts()"
-        >
+        <button id="btn-clear-text" type="button" onclick="clearTexts()">
           Clear
         </button>
-        <button
-          id="btn-voice-text"
-          class="button"
-          type="button"
-          onclick="voiceTexts()"
-        >
+        <button id="btn-voice-text" type="button" onclick="voiceTexts()">
           Voice
         </button>
       </div>
