Update: app/js/detect_text.js, app/pages/text.html

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -70,8 +70,31 @@
         <button id="btn-clear-text" type="button" onclick="clearTexts()">
           Clear
         </button>
+      </div>
+
+      <div class="row-text">
         <button id="btn-voice-text" type="button" onclick="voiceTexts()">
           Voice
+        </button>
+        <button
+          id="btn-translate-text"
+          type="button"
+          onclick="translateTexts()"
+        >
+          Translate
+        </button>
+        <button id="btn-save-text" type="button" onclick="saveTexts()">
+          Save
+        </button>
+        <button id="btn-print-text" type="button" onclick="printTexts()">
+          Print
+        </button>
+        <button
+          id="btn-spreadsheet-text"
+          type="button"
+          onclick="spreadsheetTexts()"
+        >
+          Spreadsheet
         </button>
       </div>
     </div>
