Update: app/js/detect_loop.js, app/pages/mode.html

--- a/app/pages/mode.html
+++ b/app/pages/mode.html
@@ -2,11 +2,11 @@
   <div class="video-source-section">
     <div class="mode-section">
       <div class="controls-section">
-        <!-- mode selection -->
+        <!-- mode detection -->
         <div class="mode-row">
-          <label for="mode-select" title="Mode Selection">Mode Selection</label>
-          <label for="mode-select">
-            <select id="mode-select" title="Select mode">
+          <label for="mode-detection" title="Mode Detect">Mode Detection</label>
+          <label for="mode-detection">
+            <select id="mode-detection" title="Select mode">
               <option value="auto" selected>Auto</option>
               <option value="manual">Manual</option>
               <option value="custom">Custom</option>
