--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <link rel="apple-touch-icon" href="app/img/icon.png" />
 
     <!-- // Add manifest for PWA -->
-    <link rel="manifest" href="manifest.json" />
-    <meta name="theme-color" content="#222222" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <!-- TensorFlow.js and COCO-SSD -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.18.0/dist/tf.min.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script> -->
