Update: app/css/styles_main.css, app/js/detect_object.js, app/js/init_system.js, app/pages/object.html, index.html

--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@
         style="display: none; padding: 0"
       ></div>
 
+      <!-- include object.html  -->
+      <div
+        class="group-frame-object"
+        id="group-frame-object"
+        include-html="app/pages/object.html"
+        style="display: none; padding: 0"
+      ></div>
+
       <!-- include text.html  -->
       <div
         class="group-frame-text"
