Update: app/js/detect_object.js, app/js/detect_text.js, app/pages/test1.html, app/pages/text.html, index.html, resources/text/eng (1).jpg, resources/text/eng (7).jpg, resources/text/eng (8).png

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -14,8 +14,8 @@
         <!-- Row 1: Language select -->
         <label for="language-select" style="margin: 0">
           <select id="language-select" title="Select language">
-            <option value="eng" selected>English</option>
-            <option value="tha">Thai</option>
+            <option value="eng">English</option>
+            <!-- <option value="tha" selected>Thai</option>
             <option value="spa">Spanish</option>
             <option value="fra">French</option>
             <option value="deu">German</option>
@@ -37,7 +37,7 @@
             <option value="ron">Romanian</option>
             <option value="swe">Swedish</option>
             <option value="fin">Finnish</option>
-            <option value="hun">Hungarian</option>
+            <option value="hun">Hungarian</option> -->
           </select>
         </label>
       </div>
@@ -91,6 +91,8 @@
           Spreadsheet
         </button>
       </div>
+
+      <!-- // Row 3: Status -->
     </div>
   </div>
 </div>
