Update: app/pages/test1.html, app/pages/text.html, index.html

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -10,12 +10,12 @@
         style="width: 100%; box-sizing: border-box"
       ></textarea>
 
+      <!-- Row 1: Language select -->
       <div class="row-text">
-        <!-- Row 1: Language select -->
         <label for="language-select" style="margin: 0">
           <select id="language-select" title="Select language">
             <option value="eng">English</option>
-            <!-- <option value="tha" selected>Thai</option>
+            <option value="tha" selected>Thai</option>
             <option value="spa">Spanish</option>
             <option value="fra">French</option>
             <option value="deu">German</option>
@@ -37,7 +37,7 @@
             <option value="ron">Romanian</option>
             <option value="swe">Swedish</option>
             <option value="fin">Finnish</option>
-            <option value="hun">Hungarian</option> -->
+            <option value="hun">Hungarian</option>
           </select>
         </label>
       </div>
@@ -93,6 +93,7 @@
       </div>
 
       <!-- // Row 3: Status -->
+      <!-- Replace the old <select id="language-select"> block with this multi-select dropdown -->
     </div>
   </div>
 </div>
