--- a/app/pages/test1.html
+++ b/app/pages/test1.html
@@ -2,15 +2,53 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Country Multi-Select</title>
+    <title>Country Multi-Select with Checkboxes</title>
     <style>
-      .flag-option {
+      .multiselect {
+        position: relative;
+        display: inline-block;
+        width: 260px;
+      }
+      .multiselect-selected {
+        padding: 8px;
+        border: 1px solid #ccc;
+        background: #fff;
+        cursor: pointer;
+        border-radius: 4px;
+      }
+      .multiselect-options {
+        display: none;
+        position: absolute;
+        background: #fff;
+        border: 1px solid #ccc;
+        z-index: 1000;
+        width: 100%;
+        max-height: 220px;
+        overflow-y: auto;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+      }
+      .multiselect.open .multiselect-options {
+        display: block;
+      }
+      .multiselect-options label {
+        display: block;
+        padding: 4px 8px;
+        cursor: pointer;
         font-size: 1.1em;
+      }
+      .multiselect-options label:hover {
+        background: #f0f0f0;
       }
     </style>
   </head>
   <body>
-    <select id="countrySelector" style="width: 240px"></select>
+    <div class="multiselect" id="country-multiselect">
+      <div class="multiselect-selected" onclick="toggleMultiselect()">
+        🌍 Select country/countries
+      </div>
+      <div class="multiselect-options" id="country-options"></div>
+    </div>
 
     <script>
       // List of countries with flag emojis
@@ -27,21 +65,54 @@
         { code: "BR", name: "Brazil", flag: "🇧🇷" },
       ];
 
-      // Add a single "Select a country" option at the top
-      const select = document.getElementById("countrySelector");
-      const topOption = document.createElement("option");
-      topOption.disabled = true;
-      topOption.selected = true;
-      topOption.textContent = "🌍 Select country/countries";
-      select.appendChild(topOption);
+      // Populate the options
+      const optionsDiv = document.getElementById("country-options");
+      optionsDiv.innerHTML = countries
+        .map(
+          (c) =>
+            `<label><input type="checkbox" value="${c.code}"> ${c.flag} ${c.name}</label>`
+        )
+        .join("");
 
-      // Populate the dropdown with country options
-      countries.forEach((country) => {
-        const option = document.createElement("option");
-        option.value = country.code;
-        option.textContent = `${country.flag} ${country.name}`;
-        option.className = "flag-option";
-        select.appendChild(option);
+      // Toggle dropdown
+      function toggleMultiselect() {
+        document.getElementById("country-multiselect").classList.toggle("open");
+      }
+
+      // Close dropdown if clicked outside
+      document.addEventListener("click", function (e) {
+        const multiselect = document.getElementById("country-multiselect");
+        if (!multiselect.contains(e.target)) {
+          multiselect.classList.remove("open");
+        }
+      });
+
+      // Update selected text
+      optionsDiv.addEventListener("change", function () {
+        const checked = optionsDiv.querySelectorAll(
+          'input[type="checkbox"]:checked'
+        );
+        const selected = Array.from(checked).map((cb) => {
+          const label = cb.parentNode.textContent.trim();
+          return "✔️ " + label;
+        });
+        document.querySelector(
+          "#country-multiselect .multiselect-selected"
+        ).textContent = selected.length
+          ? selected.join(", ")
+          : "🌍 Select country/countries";
+      });
+
+      // Helper to get selected country codes in JS
+      function getSelectedCountries() {
+        const checked = document.querySelectorAll(
+          '#country-multiselect .multiselect-options input[type="checkbox"]:checked'
+        );
+        return Array.from(checked).map((cb) => cb.value);
+      }
+      // Example: log selected countries on change
+      optionsDiv.addEventListener("change", function () {
+        console.log(getSelectedCountries());
       });
     </script>
   </body>
