Update: index.html

--- a/index.html
+++ b/index.html
@@ -15,30 +15,27 @@
     <link rel="stylesheet" href="app/css/styles_main.css" />
 
     <!-- // iOS support -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <link rel="apple-touch-icon" href="app/img/icon.png" />
-
+    <link rel="apple-touch-icon" href="app/img/icon.png" /> -->
     <!-- // Add manifest for PWA -->
     <link rel="manifest" href="manifest.webmanifest" />
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-
     <!-- Bootstrap CSS -->
-    <!-- <link
+    <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
-    /> -->
-
+    />
     <!-- Bootstrap JS -->
-    <!-- <script
+    <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
 
     <!-- TensorFlow.js and COCO-SSD -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.18.0/dist/tf.min.js"></script> -->
