--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- <link rel="icon" type="image/x-icon" href="img/favicon.ico" /> -->
     <link rel="icon" type="image/x-icon" href="app/img/icon.png" />
 
+    <meta http-equiv="Content-Security-Policy" />
+
     <!-- Add CSS styles -->
     <link rel="stylesheet" href="app/css/styles_main.css" />
 
