--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
     <script src="app/js/voice_command.js"></script>
     <script src="app/js/voice_alert.js"></script>
     <script src="app/js/voice_status.js"></script>
-    <script src="app/js/include_html.js"></script>
+    <!-- <script src="app/js/include_html.js"></script> -->
     <script src="app/js/service-worker.js"></script>
   </body>
 </html>
