Update: index.html

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
     <script src="app/js/voice_alert.js"></script>
     <script src="app/js/voice_status.js"></script>
     <!-- <script src="app/js/include_html0.js"></script> -->
-    <script src="app/js/include_html.js"></script>
+    <!-- <script src="app/js/include_html.js"></script> -->
     <script src="app/js/service-worker.js"></script>
   </body>
 </html>
