Update: app/css/styles_main.css, app/js/include_html.js, app/js/selector_source.js, index.html

--- a/index.html
+++ b/index.html
@@ -317,14 +317,6 @@
           >
             Help
           </a>
-          <!-- |
-          <a
-            class="btn-link fw-bold"
-            href="https://ocr-tech.github.io/OpenLens/"
-            target="_blank"
-            style="text-decoration: none"
-            >Web</a
-          > -->
           |
           <a
             class="btn-link fw-bold"
@@ -425,7 +417,7 @@
     <script src="app/js/voice_alert.js"></script>
     <script src="app/js/voice_status.js"></script>
     <!-- <script src="app/js/include_html0.js"></script> -->
-    <!-- <script src="app/js/include_html.js"></script> -->
+    <script src="app/js/include_html.js"></script>
     <script src="app/js/service-worker.js"></script>
   </body>
 </html>
