Update: app/css/styles_main.css, app/js/selector_language.js, app/pages/text.html, index.html

--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -93,7 +93,14 @@
       </div>
 
       <!-- // Row 3: Status -->
-      <!-- Replace the old <select id="language-select"> block with this multi-select dropdown -->
+      <div class="multiselect" id="country-multiselect">
+        <div class="multiselect-selected" onclick="toggleMultiselect()">
+          Select country
+        </div>
+        <div class="multiselect-options" id="country-options"></div>
+      </div>
+
+      <!-- Row 1: Language select -->
     </div>
   </div>
 </div>
