--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="Content-Security-Policy" />
+    <!-- <meta http-equiv="Content-Security-Policy"> -->
 
     <title>OpenLens</title>
 
-    <!-- <meta name="viewport" content="width=1200, initial-scale=1.0" /> -->
+    <!-- <meta name="viewport" content="width=1200, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Add favicon -->
-    <!-- <link rel="icon" type="image/x-icon" href="img/favicon.ico" /> -->
+    <!-- <link rel="icon" type="image/x-icon" href="img/favicon.ico"> -->
     <link rel="icon" type="image/x-icon" href="app/img/icon.png" />
 
     <!-- Add CSS styles -->
     <link rel="stylesheet" href="app/css/styles_main.css" />
 
     <!-- // iOS support -->
-    <!-- <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <link rel="apple-touch-icon" href="app/img/icon.png" /> -->
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="apple-touch-icon" href="app/img/icon.png"> -->
     <!-- // Add manifest for PWA -->
     <link rel="manifest" href="manifest.webmanifest" />
 
@@ -370,8 +370,6 @@
     </div>
 
     <!-- Add JavaScript files -->
-    <!-- The script is moved to the end of the body to ensure DOM elements are loaded -->
-
     <script src="app/js/init_system.js"></script>
     <script src="app/js/source.js"></script>
     <script src="app/js/mode.js"></script>
@@ -411,6 +409,7 @@
     <script src="app/js/database.js"></script>
     <script src="app/js/selector_source.js"></script>
     <script src="app/js/selector_unit.js"></script>
+    <script src="app/js/selector_language.js"></script>
     <script src="app/js/command.js"></script>
     <script src="app/js/voice.js"></script>
     <script src="app/js/voice_command.js"></script>
