--- a/app/pages/text.html
+++ b/app/pages/text.html
@@ -26,8 +26,8 @@
       <div class="row-text">
         <label for="language-select" style="margin: 0">
           <select id="language-select" title="Select language">
-            <option value="eng">English</option>
-            <option value="tha" selected>Thai</option>
+            <option value="eng" selected>English</option>
+            <option value="tha">Thai</option>
             <!-- <option value="spa">Spanish</option>
             <option value="fra">French</option>
             <option value="deu">German</option>
