Update: app/js/detect_text.js, app/js/script_xlsx_min.js, index.html

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-
     <!-- TensorFlow.js and COCO-SSD -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.18.0/dist/tf.min.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.1/dist/tesseract.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script> -->
     <script src="app/js/script_tf_min.js"></script>
     <script src="app/js/script_coco_ssd.js"></script>
     <script src="app/js/script_tesseract.js"></script>
+    <script src="app/js/script_xlsx_min.js"></script>
   </head>
 
   <body>
