Update: app/js/detect_image_processing.js, app/js/detect_text.js, app/js/script_opencv.js, index.html, resources/doc/doc1d.jpg

--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.1/dist/tesseract.min.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script> -->
+    <!-- https://docs.opencv.org/4.x/opencv.js -->
     <script src="app/js/script_tf_min.js"></script>
     <script src="app/js/script_coco_ssd.js"></script>
     <script src="app/js/script_tesseract.js"></script>
     <script src="app/js/script_xlsx_min.js"></script>
+    <script src="app/js/script_opencv.js"></script>
   </head>
 
   <body>
@@ -386,6 +388,7 @@
     <script src="app/js/detect.js"></script>
     <script src="app/js/setting.js"></script>
     <script src="app/js/gemini.js"></script>
+    <script src="app/js/detect_image_processing.js"></script>
     <script src="app/js/detect_text.js"></script>
     <script src="app/js/detect_object.js"></script>
     <script src="app/js/detect_motion.js"></script>
